--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+libc = "0.2.174"
+nix = "0.30.1"
+rustls = "0.23.28"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
+users = "0.11.0"
 
 
