--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,15 @@
 [package]
-name = "Acrme"
+name = "acrme"
 version = "0.1.0"
+authors = ["Arc Asumity <arcasumity@hotmail.com>"]
+license = "GPL-3.0-or-later"
 edition = "2024"
 
 [dependencies]
+clap = "4.5.40"
+fern = "0.7.1"
 libc = "0.2.174"
+log = "0.4.27"
 nix = "0.30.1"
 rustls = "0.23.28"
 serde = { version = "1.0.219", features = ["derive"] }
