--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,14 +6,15 @@ license = "GPL-3.0-or-later"
 edition = "2024"
 
 [dependencies]
-clap = { version = "4.5.40", features = ["cargo", "derive"] }
+clap = { version = "4.5.45", features = ["cargo", "derive"] }
 fern = "0.7.1"
-libc = "0.2.174"
+libc = "0.2.175"
 log = "0.4.27"
 nix = "0.30.1"
-rustls = "0.23.28"
+reqwest = "0.12.23"
+rustls = "0.23.31"
 serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.140"
+serde_json = "1.0.143"
 users = "0.11.0"
 
 
